[gd_scene load_steps=5 format=2]

[ext_resource path="res://Action RPG Resources/System/CharaList.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Action RPG Resources/Shadows/Shadow-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Action RPG Resources/Effects/temp.png" type="Texture" id=4]

[node name="CharaList" type="YSort"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
z_index = 11

[node name="Camera2D" type="Camera2D" parent="Player"]
unique_name_in_owner = true
current = true
limit_smoothed = true
smoothing_enabled = true

[node name="lowLight" type="Sprite" parent="."]
unique_name_in_owner = true
modulate = Color( 0.352941, 0.352941, 0.352941, 0.658824 )
position = Vector2( 1, 0 )
z_index = 10
texture = ExtResource( 4 )

[node name="DuelSystem" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 1, 0 )

[node name="Player_Pos" type="Sprite" parent="DuelSystem"]
unique_name_in_owner = true
visible = false
position = Vector2( -112, 56 )
texture = ExtResource( 3 )
offset = Vector2( -1, 0 )

[node name="Enemy_Pos" type="Sprite" parent="DuelSystem"]
unique_name_in_owner = true
visible = false
position = Vector2( 112, 56 )
texture = ExtResource( 3 )
offset = Vector2( -1, 0 )
